# rockchip-linux-external-DuerClientSDK

./: CMakeLists.txt  build.sh  build_third.sh
DCSApp/include/DCSApp/: ApplicationManager.h  DCSApplication.h  DeviceIoWrapper.h  DuerLinkMtkInstance.h  DuerLinkWrapper.h  PortAudioMicrophoneWrapper.h  SoundController.h  VoiceAndTouchWakeUpObserver.h  get_event.h
DCSApp/include/MediaPlayer/: AlsaController.h  AudioPlayerImpl.h  Mp3StreamPlayer.h  PcmStreamPlayer.h  TtsPlayerProxy.h
DCSApp/src/: ActivityMonitorSingleton.cpp  AlsaRecorder.cpp  ApplicationManager.cpp  CMakeLists.txt  Configuration.cpp  DCSApplication.cpp  DCSKeyHandler.cpp  DeviceIoWrapper.cpp  DuerLinkMtkInstance.cpp  DuerLinkWrapper.cpp  InfoLed.cpp  PortAudioMicrophoneWrapper.cpp  SoundController.cpp  SystemUpdateRevWrapper.cpp  VoiceAndTouchWakeUpObserver.cpp  get_event.cpp  main.cpp
DCSApp/src/Box86/: DuerLinkWrapper.cpp
DCSApp/src/Dlna/: DlnaDmrUpnpDevice.cpp
DCSApp/src/MediaPlayer/: AlsaController.cpp  AudioDecoder.cpp  AudioPlayerImpl.cpp  BlueToothPlayerProxy.cpp  LocalSynthesizerPlayer.cpp  LocalTtsProxy.cpp  MediaPlayerProxy.cpp  Mp3StreamPlayer.cpp  PcmBufPool.cpp  PcmResampler.cpp  PcmStreamPlayer.cpp  RapidPcmPlayer.cpp  SimpleAudioplayerImpl.cpp  TtsPlayer.cpp  TtsPlayerProxy.cpp
DCSApp/src/MediaPlayer/Impl/: AlsaController.cpp  Mp3UrlPlayerImpl.cpp
DCSApp/src/MediaPlayer/Proxy/: AlertsPlayerProxy.cpp  BlueToothPlayerProxy.cpp  LocalPlayerProxy.cpp  MediaPlayerProxy.cpp  TtsPlayerProxy.cpp
Framework/DeviceIo/include/DeviceIo/: DeviceIo.h  InfoLed.h
Framework/DeviceIo/src/: CMakeLists.txt
Framework/DeviceIo/src/linux/: DeviceIo.cpp  InfoLed.cpp
SocketApp/include/: socket_app.h
appresources/: CMakeLists.txt
resources/: config.json  esis_vad_model_20171023.pkg
sdk/include/DcsSdk/: DcsSdk.h  DcsSdkParameters.h  KeyWordObserverInterface.h  LocalMediaPlayerInterface.h  Stream.h
sdk/include/DeviceTools/: DeviceUtils.h
sdk/include/LoggerUtils/: Logger.h
sdk/include/duer_link/: duer_link_sdk.h
sdk/lib/: libgomp.la  libgomp.so.1
